# ai-workspace

./: .gitignore  .gitmodules  CLAUDE.md  README.md
agent-service/: .env.example  README.md  package.json
agent-service/tests/: agent-service.test.ts
codenano/: .eslintrc.json  .gitignore
codenano-api/: .env.example  README.md  package.json  vitest.config.ts
codenano-api/codenano/: .versionrc.json  book.json  eslint.config.js  vitest.config.ts  vitest.integration.config.ts
codenano-api/src/: agent-wrapper.js  agent.ts  index.ts
codenano-api/tests/: agent-service.test.ts  routes.test.ts  sandbox-docker.test.ts  sandbox-integration.test.ts  workspace-isolation.test.ts
codenano-cli/: package-lock.json  package.json  tsconfig.json
codenano-cli/src/: index.ts  rpc-server.ts  rpc-types.ts
codenano-cli/tests/: rpc-handlers.test.ts
codenano-service/: .env.example  main.py  pyproject.toml
codenano-service/api/routes/: files.py  sessions.py
codenano-service/core/: config.py
codenano-service/services/: rpc_client.py  session_manager.py
codenano-service/tests/: test_files.py  test_sandbox.py  test_tool_preset.py
codenano-webui/: index.html  package.json  tailwind.config.js  tsconfig.build.json  vite.config.ts
codenano-webui/src/: App.tsx  index.css
codenano/codenano/: tsconfig.json
docker/: Dockerfile  Dockerfile.huawei  Dockerfile.tencent
docs/: agent-service-api.md  api-test-report.md  codenano-api.md  local-development.md
fastapi/: .env.example  config.py  main.py  requirements.txt  rpc_client.py  sandbox.py  session_manager.py
(+271 files in other folders)
